# aux-analytics

./: .gitignore  Cargo.toml  LICENSE  README.md  configuration.md  observability.md  rustfmt.toml  style-debt.tsv  taplo.toml  tutorial.md
.cargo/: config.toml
.config/: nextest.toml
config/prod/k8s/ducklake-aux-fdb-s3/: analytics-config.json
config/prod/k8s/ducklake-postgres-s3/: analytics-config.json
crates/analytics-api/: Cargo.toml
crates/analytics-api/openapi/: aux-analytics.openapi.json
crates/analytics-api/src/: cli.rs  engine_access.rs  engine_access_tests.rs  error.rs  error_tests.rs  lib.rs  main.rs  openapi.rs  performance_tests.rs  query_response.rs  quint_query_security_tests.rs  quint_source_polling_tests.rs  request_validation.rs  retention.rs  router.rs  router_tests.rs  runtime_config.rs  runtime_tests.rs  server.rs  server_tests.rs  source_polling.rs  source_polling_tests.rs  types.rs
crates/analytics-api/src/source_polling/: batch.rs  batch_metrics.rs  checkpoint_lease.rs  entry.rs  hashed_range.rs  hashed_range_coordination.rs  health.rs  legacy.rs  legacy_lease.rs  memory.rs  metrics.rs  planning.rs  time.rs
crates/analytics-cli/: Cargo.toml
crates/analytics-cli/src/: app.rs  app_tests.rs  backend_args.rs  backfill.rs  backfill_args.rs  backfill_request.rs  check.rs  check_args.rs  cli.rs  error.rs  error_tests.rs  fix.rs  fix_args.rs  lib.rs  main.rs  main_tests.rs  operations.rs  operations_args.rs  privacy_fix.rs  privacy_fix_args.rs  quint_cli_operations_tests.rs  quint_query_security_tests.rs  raw_backup.rs  raw_backup_args.rs  runtime_config.rs  trim.rs  trim_args.rs
crates/analytics-config/: Cargo.toml
crates/analytics-config/src/: constants.rs  error.rs  error_tests.rs  lib.rs  loader.rs  loader_tests.rs  model.rs  resolved.rs  resolved_tests.rs
crates/analytics-contract/: Cargo.toml
crates/analytics-contract/src/: constants.rs  errors.rs  lib.rs  loader.rs  manifest.rs  manifest_tests.rs  privacy_policy.rs  privacy_policy_tests.rs  query.rs  query_tests.rs  quint_manifest_tests.rs  quint_privacy_policy_tests.rs  quint_source_position_tests.rs  range_purge.rs  source_position.rs  source_position_tests.rs  storage.rs  storage_tests.rs
crates/analytics-engine/: Cargo.toml
crates/analytics-engine/src/: batch_writer.rs  cache.rs  cache_tests.rs  condition.rs  condition_tests.rs  engine.rs  engine_tests.rs  lib.rs  performance_tests.rs  projection.rs  projection_tests.rs  quint_ingestion_tests.rs  quint_manifest_projection_bughunt_tests.rs  quint_projection_tests.rs  quint_query_tests.rs  quint_retention_tests.rs  row.rs  row_expansion.rs  sql.rs  sql_tests.rs  structured_query.rs  structured_query_tests.rs
crates/analytics-fixtures/: Cargo.toml
crates/analytics-fixtures/src/: fixtures.rs  lib.rs
crates/analytics-lambda/: Cargo.toml
crates/analytics-lambda/src/: lambda.rs  lambda_tests.rs  lib.rs  main.rs  quint_query_security_tests.rs  runtime.rs
crates/analytics-operations/: Cargo.toml
crates/analytics-operations/src/: backfill_execution.rs  backfill_execution_tests.rs  backfill_plan.rs  backfill_plan_tests.rs  check.rs  check_performance_tests.rs  check_sources.rs  check_stream_order_tests.rs  check_tests.rs  lib.rs  operation_contract_tests.rs  privacy_fix.rs  privacy_fix_tests.rs  quint_backfill_planning_tests.rs  quint_check_tests.rs  quint_operations_tests.rs  quint_privacy_fix_tests.rs  quint_rate_limit_tests.rs  quint_raw_backup_tests.rs  quint_table_fix_tests.rs  quint_trim_tests.rs  rate_limit.rs  rate_limit_tests.rs  raw_backup.rs  raw_backup_tests.rs  store.rs  store_tests.rs  table_fix.rs  table_fix_tests.rs  trim.rs  trim_tests.rs  types.rs
crates/analytics-operations/src/raw_backup/: checksum.rs  codec.rs
crates/analytics-quint-test-support/: Cargo.toml
crates/analytics-quint-test-support/src/: lib.rs
crates/analytics-storage/: Cargo.toml
crates/analytics-storage/src/: aux_storage_client.rs  aux_storage_client_tests.rs  aws_stream.rs  aws_stream_tests.rs  current_row.rs  current_row_aux_storage_tests.rs  current_row_dynamodb_tests.rs  current_row_test_support.rs  error.rs  error_tests.rs  execution.rs  facade.rs  ingest_hashed_range.rs  lib.rs  planning.rs  poller.rs  poller_config.rs  poller_tests.rs  quint_ingest_hashed_range_tests.rs  quint_polling_restart_resume_tests.rs  quint_polling_storage_tests.rs  retention.rs  source_routes.rs  source_routes_tests.rs  storage_tests.rs  types.rs
examples/docker-compose-demo/: README.md  analytics-config.json  docker-compose.yml  manifest.json
examples/local-aux-storage-duckdb/: README.md  analytics-config.json
examples/local-ducklake-file/: README.md  analytics-config.json  manifest.json
examples/retention/: README.md  analytics-config-dynamic.json  manifest-static.json
schemas/: config.schema.json  manifest.schema.json
specs/: backfill.qnt  backfill_bughunt.qnt  backfill_capability_discovery_mbt.qnt  backfill_planning.qnt  backfill_planning_bughunt.qnt  backfill_planning_mbt.qnt  check.qnt  check_mbt.qnt  cli_operations_mbt.qnt  ingest_hashed_range.qnt  ingest_hashed_range_bughunt.qnt  ingest_hashed_range_mbt.qnt  ingestion.qnt  ingestion_lifecycle_bughunt.qnt  manifest.qnt  manifest_projection_bughunt.qnt  operations.qnt  operations_bughunt.qnt  operations_mbt.qnt  polling_api.qnt  polling_checkpoint_bughunt.qnt  polling_restart_resume.qnt  polling_storage.qnt  privacy_fix.qnt  privacy_fix_mbt.qnt  privacy_policy.qnt  privacy_policy_mbt.qnt  projection.qnt  query.qnt  query_security_bughunt.qnt  rate_limit_mbt.qnt  raw_backup.qnt  raw_backup_mbt.qnt  retention.qnt  retention_bughunt.qnt  source_batch_integration.qnt  source_position.qnt  source_position_bughunt.qnt  source_position_mbt.qnt  table_fix.qnt  (+3 more)
