[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "BUSL-1.1"
repository = "https://github.com/u19r/aux-analytics"
version = "0.1.0"

[workspace.dependencies]
alloc-counter = { git = "https://github.com/u19r/aux-common", package = "alloc-counter", rev = "2d65d744d937e2f37cf3b4784f9988a49842800a" }
analytics-api = { path = "crates/analytics-api", default-features = false }
analytics-canary = { path = "crates/analytics-canary" }
analytics-cli = { path = "crates/analytics-cli" }
analytics-contract = { path = "crates/analytics-contract" }
analytics-engine = { path = "crates/analytics-engine", default-features = false }
analytics-fixtures = { path = "crates/analytics-fixtures" }
analytics-operations = { path = "crates/analytics-operations" }
analytics-quint-test-support = { path = "crates/analytics-quint-test-support" }
analytics-storage = { path = "crates/analytics-storage" }
anyhow = "1.0.100"
aws-config = "1.8.16"
aws-credential-types = "1.2.14"
aws-credentials = { git = "https://github.com/u19r/aux-common", package = "aws-credentials", rev = "2d65d744d937e2f37cf3b4784f9988a49842800a" }
aws-sdk-dynamodb = "1.99.0"
aws-sdk-dynamodbstreams = "1.99.0"
aws-sdk-ssm = "1.99.0"
axum = "0.8.9"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.0"
config = { package = "analytics-config", path = "crates/analytics-config" }
cucumber = "0.23.0"
duckdb = { version = "1.10504.0", default-features = false, features = ["r2d2"] }
flate2 = "1.1.9"
http-body-util = "0.1.3"
jsonschema = { version = "0.46.4", default-features = false, features = ["resolve-file"] }
lambda_runtime = "0.11"
metrics = "0.24.5"
metrics-exporter-prometheus = "0.18.3"
quint-connect = "0.1.1"
regex = "1.12.3"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
rust_decimal = "1.42.0"
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
storage = { git = "https://github.com/u19r/aux-storage", package = "storage", rev = "c1d1a94569376d20d61b6ff9aa8c234a91fc6d7d", default-features = false }
storage-condition = { git = "https://github.com/u19r/aux-storage", package = "storage-condition", rev = "c1d1a94569376d20d61b6ff9aa8c234a91fc6d7d" }
storage-types = { git = "https://github.com/u19r/aux-storage", package = "storage-types", rev = "c1d1a94569376d20d61b6ff9aa8c234a91fc6d7d", default-features = false }
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full", "tracing"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.8", features = ["catch-panic", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
url = "2.5.7"
utoipa = { version = "5.5.0", features = ["axum_extras"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
string_slice = "deny"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
implicit_hasher = "allow"
match_same_arms = "allow"
cargo_common_metadata = "allow"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tokio_unstable)"] }
dead_code = "warn"
unused_imports = "warn"
unused_variables = "warn"
unused_must_use = "warn"

[profile.release]
opt-level = "z"
codegen-units = 1
overflow-checks = true
panic = "unwind"
lto = "fat"
strip = "symbols"

[profile.fast-release]
inherits = "release"
opt-level = 1
codegen-units = 256
lto = false
