[package]
edition.workspace = true
license.workspace = true
name = "analytics-config"
repository.workspace = true
version.workspace = true

[lib]
name = "config"

[dependencies]
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
