[package]
edition.workspace = true
license.workspace = true
name = "analytics-lambda"
repository.workspace = true
version.workspace = true

[[bin]]
name = "aux-analytics-lambda"
path = "src/main.rs"

[features]
default = ["bundled"]
bundled = ["analytics-api/bundled", "analytics-engine/bundled"]

[dependencies]
analytics-api = { workspace = true, default-features = false }
analytics-contract = { workspace = true }
analytics-engine = { workspace = true, default-features = false }
config = { workspace = true }
jsonschema = { workspace = true }
lambda_runtime = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
analytics-fixtures = { workspace = true }
anyhow = { workspace = true }
quint-connect = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
