[package]
edition.workspace = true
license.workspace = true
name = "analytics-storage"
repository.workspace = true
version.workspace = true

[lib]
doctest = false

[dependencies]
analytics-contract = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-dynamodbstreams = { workspace = true }
base64 = { workspace = true }
config = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
storage-types = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
analytics-quint-test-support = { workspace = true }
anyhow = { workspace = true }
quint-connect = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
